2008-03-07  Olav Vitters  <olav@bkor.dhs.org>

	* include/evilsedhack: 'Download' doesn't match with actual content.
	Name it 'Latest Release' for now. Or perhaps 'Release Notes'. Better
	name badly needed. For now, just fix Download annoyance.

2008-03-04  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/press/releases/Makefile.am: fix Makefile

2008-03-04  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/press/releases/2008-03-mofojoins.wml:
	* www.gnome.org/press/releases/Makefile.am:
	* www.gnome.org/press/releases/index.wml: add PR about MoFo joining the
	advisory board

2008-03-04  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/projects/outreach/a11y/index.wml: add line break on
	news entry.

2008-03-04  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/friends/index.wml: update foundation address

2008-03-02  Joergen Scheibengruber  <mfcn@gmx.de>

	* www.gnome.org/projects/netspeed/*: Added netspeed websites
	* www.gnome.org/projects/Makefile.am: Added netspeed to SUBDIRS
	* configure.in: Added netspeed to AC_OUTPUT

2008-03-02  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/projects/outreach/a11y/tasks/index.wml,
	www.gnome.org/projects/outreach/a11y/tasks/evince/index.wml: fix
	typos.

2008-03-01  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/friends/donors_2007.wml: add missing donator

2008-03-01  Olav Vitters  <olav@bkor.dhs.org>

	* configure.in: Remove the 2.12 - 2.18 release notes as these are
	available in the release-notes repos from now on.
	* www.gnome.org/start/2.12/Makefile.am: Kill notes directory.
	* www.gnome.org/start/2.12/notes/*: Remove
	* www.gnome.org/start/2.14/Makefile.am: Kill the notes directory.
	* www.gnome.org/start/2.14/notes/*: Remove
	* www.gnome.org/start/2.16/*: Remove
	* www.gnome.org/start/2.18/*: Remove
	* www.gnome.org/start/Makefile.am: Remove references to 2.16, 2.18
	directories. Keep 2.12 and 2.14 as they still have translated press
	releases.

2008-03-01  Andreas Nilsson  <andreas@andreasn.se>
