@@ -74,10 +74,10 @@
       <div id="sidebar">
 	<p class="section">Downloads</p>
 	<p>The latest releases can always be found at the <a href="http://ftp.gnome.org/pub/GNOME/sources/eog">GNOME ftp site</a>.</p>
-	<p>The latest stable release is <a href="http://ftp.gnome.org/pub/GNOME/sources/eog/2.20/eog-2.20.4.tar.gz">2.20.4</a>
-	  (<a href="http://mail.gnome.org/archives/eog-list/2008-January/msg00000.html">release notes</a>).</p>
- 	<p>The latest unstable release is <a href="http://ftp.gnome.org/pub/GNOME/sources/eog/2.21/eog-2.21.92.tar.gz">2.21.92</a>
- 	  (<a href="http://mail.gnome.org/archives/eog-list/2008-February/msg00001.html">release notes</a>).</p>
+	<p>The latest stable release is <a href="http://ftp.gnome.org/pub/GNOME/sources/eog/2.22/eog-2.22.0.tar.gz">2.22.0</a>
+	  (<a href="http://mail.gnome.org/archives/eog-list/2008-March/msg00001.html">release notes</a>).</p>
+ 	<!--<p>The latest unstable release is <a href="http://ftp.gnome.org/pub/GNOME/sources/eog/2.23/eog-2.23.1.tar.gz">2.21.92</a>
+ 	  (<a href="http://mail.gnome.org/archives/eog-list/2008-February/msg00001.html">release notes</a>).</p>-->
 
 	<p class="section">Feedback</p>
 	<p>Bugs should be reported to the <a href="http://bugzilla.gnome.org">GNOME Bug Tracking System</a>.</p>
