@@ -1,3 +1,8 @@
+2008-03-10  Lucas Rocha  <lucasr@gnome.org>
+
+	* www.gnome.org/projects/eog/index.html: update latest stable release
+	on EOG's website front page.
+
 2008-03-07  Olav Vitters  <olav@bkor.dhs.org>
 
 	* include/evilsedhack: 'Download' doesn't match with actual content.
